<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edt_email"
    android:layout_width="match_parent"
    android:background="@color/outro_branco"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:contentDescription="@string/btnBackDescription"
        android:layout_marginStart="22dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_seta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.047" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="64dp"
        android:fontFamily="@font/nunito_semi"
        android:text="@string/bemvindoLabel"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/backBtn"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="28dp"
        android:layout_marginRight="22dp"
        android:fontFamily="@font/nunito_semi"
        android:text="@string/txt_abertura_de_conta"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ScrollView
        android:id="@+id/sv_register"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_nomeCompleto"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/edt_custom"
                android:hint="@string/nomeCompletoHinrt"
                android:fontFamily="@font/ubuntu_regular"
                android:drawableEnd="@drawable/ic_pessoa_dois"
                android:inputType="textPersonName"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColorHint="@color/azul_claro" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_cpf"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/edt_custom"
                android:fontFamily="@font/ubuntu_regular"
                android:hint="@string/cpfHint"
                android:drawableEnd="@drawable/ic_documentos"
                android:inputType="number"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColorHint="@color/azul_claro" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_rg"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/edt_custom"
                android:fontFamily="@font/ubuntu_regular"
                android:hint="@string/rgHint"
                android:drawableEnd="@drawable/ic_documentos"
                android:inputType="number"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColorHint="@color/azul_claro" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_email_register"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/edt_custom"
                android:fontFamily="@font/ubuntu_regular"
                android:hint="@string/emailHint"
                android:drawableEnd="@drawable/ic_email"
                android:inputType="textEmailAddress"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColorHint="@color/azul_claro" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_celular"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/edt_custom"
                android:hint="@string/celularHint"
                android:fontFamily="@font/ubuntu_regular"
                android:drawableEnd="@drawable/ic_numero"
                android:inputType="number"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColorHint="@color/azul_claro" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_data"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/edt_custom"
                android:hint="@string/dateNascHint"
                android:fontFamily="@font/ubuntu_regular"
                android:drawableEnd="@drawable/ic_calendar"
                android:inputType="date"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColorHint="@color/azul_claro" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_cep"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/edt_custom"
                android:fontFamily="@font/ubuntu_regular"
                android:hint="@string/cepHint"
                android:drawableEnd="@drawable/ic_cep"
                android:inputType="number"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColorHint="@color/azul_claro" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_rua"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/ubuntu_regular"
                android:background="@drawable/edt_custom"
                android:hint="@string/enderecoHint"
                android:drawableEnd="@drawable/ic_endereco_dois"
                android:inputType="text"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColorHint="@color/azul_claro" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_numEnd"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/edt_custom"
                android:fontFamily="@font/ubuntu_regular"
                android:hint="@string/NumeroHint"
                android:drawableEnd="@drawable/ic_numero"
                android:inputType="number"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColorHint="@color/azul_claro" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_complemento"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/edt_custom"
                android:hint="@string/complementoHint"
                android:fontFamily="@font/ubuntu_regular"
                android:drawableEnd="@drawable/ic_complemento"
                android:inputType="text"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColorHint="@color/azul_claro" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_bairro"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/edt_custom"
                android:fontFamily="@font/ubuntu_regular"
                android:hint="@string/bairroHint"
                android:drawableEnd="@drawable/ic_endereco_dois"
                android:inputType="text"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColorHint="@color/azul_claro" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_cidade"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/edt_custom"
                android:fontFamily="@font/ubuntu_regular"
                android:hint="@string/cidadeHint"
                android:drawableEnd="@drawable/ic_estado"
                android:inputType="text"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColorHint="@color/azul_claro" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_uf"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/edt_custom"
                android:fontFamily="@font/ubuntu_regular"
                android:hint="@string/estadoHint"
                android:drawableEnd="@drawable/ic_estado"
                android:inputType="text"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColorHint="@color/azul_claro" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_renda"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/edt_custom"
                android:hint="@string/renda_mensalHint"
                android:fontFamily="@font/ubuntu_regular"
                android:drawableEnd="@drawable/ic_renda"
                android:inputType="numberDecimal"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColorHint="@color/azul_claro" />


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_senha"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:fontFamily="@font/ubuntu_regular"
                android:layout_marginTop="12dp"
                android:background="@drawable/edt_custom"
                android:hint="@string/senhaHint"
                android:drawableEnd="@drawable/ic_senha"
                android:inputType="textPassword"
                android:paddingLeft="20dp"
                android:maxLength="12"
                android:paddingRight="20dp"
                android:textColorHint="@color/azul_claro" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_confirmaSenha"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/edt_custom"
                android:fontFamily="@font/ubuntu_regular"
                android:hint="@string/confirmar_senhaHint"
                android:maxLength="12"
                android:drawableEnd="@drawable/ic_senha"
                android:inputType="textPassword"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColorHint="@color/azul_claro" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="12dp" >

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:buttonTint="@color/azul_medio"
                    android:fontFamily="@font/nunito_semi"
                    android:textSize="14sp"
                    android:paddingStart="6dp"
                    android:paddingEnd="0dp"
                    android:text="@string/lieconcordoHint"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/termos"
                    android:fontFamily="@font/nunito_semi"
                    android:textColor="@color/azul_medio"
                    android:layout_marginStart="3dp"
                    android:id="@+id/txtTermos"/>
            </LinearLayout>


            <android.widget.Button
                android:id="@+id/btn_registrar"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/btn_custom2"
                android:drawablePadding="-20dp"
                android:fontFamily="@font/nunito_semi"
                android:text="@string/prosseguir"
                android:textAllCaps="false"
                android:textColor="@color/outro_branco"
                android:textSize="18sp" />


        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>


