<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_seis"

    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:alpha="0.8"
        android:background="@drawable/incio_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="115dp"
            android:layout_marginEnd="32dp"
            android:alpha="0.9"
            android:fontFamily="@font/nunito_semi"
            android:text="@string/texto_intro"
            android:textColor="@color/black"
            android:textSize="32sp" />


    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="42dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/four"
        android:textAlignment="center"
        android:textColor="@color/azul_claro"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

    </TextView>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/pay"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent">
    </TextView>


    <android.widget.Button
        android:id="@+id/btn_registrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="132dp"
        android:alpha="0.95"
        android:background="@drawable/btn_custom"
        android:drawableEnd="@drawable/ic_seta_direita"
        android:drawablePadding="-35dp"
        android:fontFamily="@font/nunito_semi"
        android:paddingEnd="16dp"
        android:paddingStart="0dp"
        android:text="@string/venha_ser_foupay"
        android:textAllCaps="false"
        android:textColor="@color/azul_claro"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/texto_entrar"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/nunito_semi"
        android:text="@string/j_cliente_clique_aqui"
        android:textColor="@color/outro_branco"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_registrar"
        tools:ignore="UsingOnClickInXml">

    </TextView>


</androidx.constraintlayout.widget.ConstraintLayout>